--- a/server/static/main.css
+++ b/server/static/main.css
@@ -53,6 +53,8 @@ body {
     color: black;
     background-color: white;
     border: solid black 2px;
+
+    cursor: pointer;
 }
 
 .send-button:hover, .send-button:focus, .send-button:active {
